tests/NormalTests/paczka1/fuzzy1/12000347.err
Error in line 1: tSweBFerg A243 65,3
Error in line 3: xBTR3wyQIL A595 58,5
Error in line 8: 5o7L A595 3Z,0
Error in line 5: tSweBFerg A595 93,8
Error in line 9: 5o7L A484 13,7
Error in line 2: tTFopDY9 A595 17,9
Error in line 13: tTFopDY9 S573 15,9
Error in line 21: tTFopDY9 A595 21,4
Error in line 20: pAEe A243 42,3
